--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,17 @@
 tr, td, th {
   text-align: center;
-  padding: 1.5rem;
-  font-size: 2rem;
+  padding: 1.6rem;
+  font-size: 1.6rem;
+  word-spacing: 0.3rem;
+  letter-spacing: 0.2rem;
+}
+
+caption {
+  text-align: center;
+  font-family: cursive;
+  font-weight: bolder;
+  text-decoration: overline;
+  font-size: 3rem;
+  word-spacing: 0.5rem;
+  letter-spacing: 0.2rem;
 }
