--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,24 @@ tr, td, th {
   letter-spacing: 0.2rem;
 }
 
+th {
+  font-size: 2rem;
+  background: linear-gradient(to bottom, rgba(238, 230, 123, 0.9), white 50%, rgba(238, 230, 123, 0.9));
+}
+
+tbody tr:nth-of-type(odd) {
+  background-color: rgba(238, 230, 123, 0.6);
+}
+
+tbody tr:nth-of-type(even) {
+  background-color: rgba(255, 140, 0, 0.5);
+}
+
+
+
 caption {
+  background-image: url(https://image.freepik.com/free-vector/sunburst-background-in-color-orange_1048-1107.jpg);
+  background-size: cover;
   text-align: center;
   font-family: cursive;
   font-weight: bolder;
@@ -15,5 +32,11 @@ caption {
   word-spacing: 0.5rem;
   letter-spacing: 0.2rem;
   margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-bottom: 0rem;
+  border-radius: 0.5rem 0.5rem 0 0;
+}
+
+tfoot {
+  background-image: url(https://image.freepik.com/free-vector/sunburst-background-in-color-orange_1048-1107.jpg);
+  background-size: cover;
 }
