--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ tbody tr:nth-of-type(odd) {
 }
 
 tbody tr:nth-of-type(even) {
-  background-color: rgba(255, 140, 0, 0.5);
+  background-color: white;
 }
 
 
